# http-client-compare

./: .gitignore  Cargo.toml  rustfmt.toml
client/go_client/: go.mod  go.sum  main.go
client/hyper_client/: Cargo.toml
client/hyper_client/src/: main.rs
client/reqwest_client/: Cargo.toml
client/reqwest_client/src/: main.rs
server/: Cargo.toml
server/resources/certs/: cert.pem  key.pem
server/src/: main.rs
