[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7" }
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
bytes = { version = "1.8.0" }
futures = { version = "0.3.31" }
rustls = { version = "0.23.13", features = ["ring"] }
tokio = { version = "1.41.0", features = ["fs", "macros", "rt", "rt-multi-thread", "signal", "sync", "time"] }
tower-http = { version = "0.6.1", features = ["compression-br", "compression-gzip", "compression-zstd", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
