[package]
name = "hyper_client"
version = "0.1.0"
edition = "2021"

[dependencies]
flate2 = {version = "1.0.34"}
futures = { version = "0.3.31" }
http-body-util = { version = "0.1.2" }
hyper = { version = "1.5.0" }
hyper-rustls = { version = "0.27.3", features = ["webpki-roots"] }
hyper-util = { version = "0.1.9", features = ["full"] }
rustls = {version = "0.23.15"}
tokio = { version = "1.41.0", features = ["fs", "macros", "rt", "rt-multi-thread", "signal", "sync", "time"] }
